--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,9 @@
 version: "3.0"
 services:
   adminer:
-    image: adminer:4.6.2
+    image: adminer:4.7
     ports:
       - "8080:8080"
-    restart: always
+    restart: unless-stopped
+    volumes:
+      - ./plugins-enabled:/var/www/html/plugins-enabled/
